--- a/index.html
+++ b/index.html
@@ -37,47 +37,47 @@
       <div id = "9" class = "row time-block">
         <div class = "col-1 hour">9AM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <div id = "10" class = "row time-block">
         <div class = "col-1 hour">10AM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
       <div id = "11" class = "row time-block">
         <div class = "col-1 hour">11AM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>         
       <div id = "12" class = "row time-block">
         <div class = "col-1 hour">12PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div id = "1" class = "row time-block">
+      <div id = "13" class = "row time-block">
         <div class = "col-1 hour">1PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div id = "2" class = "row time-block">
+      <div id = "14" class = "row time-block">
         <div class = "col-1 hour">2PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div id = "3" class = "row time-block">
+      <div id = "15" class = "row time-block">
         <div class = "col-1 hour">3PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div id = "4" class = "row time-block">
+      <div id = "16" class = "row time-block">
         <div class = "col-1 hour">4PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
-      <div id = "5" class = "row time-block">
+      <div id = "17" class = "row time-block">
         <div class = "col-1 hour">5PM</div>
         <textarea class = "col-10 description"></textarea>
-        <div class = "col-1 saveBtn">💾</div>
+        <button class = "col-1 saveBtn"><i class="fas fa-save"></i></button>
       </div>
     </div>
 
